--- a/26.md
+++ b/26.md
@@ -2,7 +2,7 @@
 
 https://studfile.net/preview/6014081/page:6/
     
-    • Определённый интеграл с одинаковыми пределами интегрирования равен нулю
+    Определённый интеграл с одинаковыми пределами интегрирования равен нулю
 
 <picture>
  <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-ZKXXeh.png">
@@ -10,7 +10,7 @@ https://studfile.net/preview/6014081/page:6/
  <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-ZKXXeh.png">
 </picture>
     
-    • Величина определённого интеграла не зависит от обозначения переменной интегрирования
+    Величина определённого интеграла не зависит от обозначения переменной интегрирования
 
 <picture>
  <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-o4mBaY.png">
@@ -18,7 +18,7 @@ https://studfile.net/preview/6014081/page:6/
  <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-o4mBaY.png">
 </picture>
     
-    • Постоянный множитель можно выносить за знак определённого интеграла
+    Постоянный множитель можно выносить за знак определённого интеграла
 
 <picture>
  <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-urXzly.png">
@@ -26,7 +26,7 @@ https://studfile.net/preview/6014081/page:6/
  <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-urXzly.png">
 </picture>
     
-    • Определённый интеграл от алгебраической суммы конечного числа функций равен алгебраической сумме определённых интегралов
+    Определённый интеграл от алгебраической суммы конечного числа функций равен алгебраической сумме определённых интегралов
 
 <picture>
  <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-kPXWbh.png">
@@ -34,7 +34,7 @@ https://studfile.net/preview/6014081/page:6/
  <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-kPXWbh.png">
 </picture>
     
-    • Если отрезок интегрирования разбит на части, то определённый интеграл по всему отрезку равен сумме определённых интегралов по его частям
+    Если отрезок интегрирования разбит на части, то определённый интеграл по всему отрезку равен сумме определённых интегралов по его частям
 
 <picture>
  <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-a2vjbL.png">
@@ -50,7 +50,7 @@ https://studfile.net/preview/6014081/page:6/
  <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-6PwfxH.png">
 </picture>
     
-    • Определённый интеграл равен произведению длины отрезка интегрирования на значение подынтегральной функции в некоторой точке x0 внутри его
+    Определённый интеграл равен произведению длины отрезка интегрирования на значение подынтегральной функции в некоторой точке x0 внутри его
 
 <picture>
  <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-ZV0hiE.png">
@@ -58,7 +58,7 @@ https://studfile.net/preview/6014081/page:6/
  <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-ZV0hiE.png">
 </picture>
     
-    • Если верхний предел интегрирования больше нижнего и подынтегральная функция неотрицательна (положительна), то и определённый интеграл неотрицателен (положителен)
+    Если верхний предел интегрирования больше нижнего и подынтегральная функция неотрицательна (положительна), то и определённый интеграл неотрицателен (положителен)
 
 <picture>
  <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-vqZ2mh.png">
@@ -66,7 +66,7 @@ https://studfile.net/preview/6014081/page:6/
  <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-vqZ2mh.png">
 </picture>
     
-    • Если верхний предел интегрирования больше нижнего и функции $f(x)$ и $g(x)$ непрерывны, то неравенство $f(x) \geqslant g(x)$ можно почленно интегрировать
+    Если верхний предел интегрирования больше нижнего и функции $f(x)$ и $g(x)$ непрерывны, то неравенство $f(x) \geqslant g(x)$ можно почленно интегрировать
 
 <picture>
  <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-6zEdUx.png">
